flux/infrastructure/flux-system-addons/deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  egress: []
